src/components/LandingText/style.module.scss
@use '../../styles/vars.scss' as vars;

.container {
  display: flex;
  flex-direction: column;
  gap: 1.813rem;
  position: relative;
  top: 20%;

  .subheading {
    @media screen and (max-width: vars.$breakpoint-md) {
      font-size: 1rem !important;
    }
  }

  .header {
    background: linear-gradient(90deg, #a5e0fb 0%, #dff5ff 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    @media screen and (max-width: vars.$breakpoint-md) {
      font-size: 2.75rem !important;
    }
  }

  .gradient {
    background: linear-gradient(
      90deg,
      #e981a0 64.06%,
      #ff6f6f 69.49%,
      #f9a857 75.8%,
      #51c0c0 83.16%,
      #62b0ff 89.12%,
      #816dff 97.71%
    );
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
  }

  .interestForm {
    display: flex;
    flex-direction: column;
    gap: 1rem;

    .subtitle {
      @media screen and (max-width: vars.$breakpoint-md) {
        font-size: 1rem !important;
      }
    }

    .buttonContainer {
      display: flex;
      gap: 1rem;

      .button {
        font-family: inherit;
        font-size: 1.313rem;
        line-height: 1.625rem;
        background-color: vars.$light-blue;
        border-radius: 100px;
        border-color: transparent;
        padding: 10px 24px;
        cursor: pointer;
        color: vars.$dark-blue;
        transition: opacity 0.2s cubic-bezier(0.2, 0, 0, 1);
        text-decoration: none;

        &[data-variant='secondary'] {
          background-color: vars.$white;
          color: vars.$black;
        }

        &:hover {
          box-shadow:
            0px 1px 2px 0px rgba(0, 0, 0, 0.3),
            0px 1px 3px 1px rgba(0, 0, 0, 0.15);
          opacity: 92%;
        }
        @media screen and (max-width: vars.$breakpoint-md) {
          font-size: 0.85rem;
          padding: 5px 12px;
        }
      }
      @media screen and (max-width: vars.$breakpoint-lg) {
        justify-content: center;
      }
    }
  }
  @media screen and (max-width: vars.$breakpoint-lg) {
    align-items: center;
    gap: 0.5rem !important;
    max-width: 90%;
  }
}

